# university-graphics

./: CMakeLists.txt  LICENSE  main.cc
.github/workflows/: ci.yml
arrow_figure/: CMakeLists.txt
arrow_figure/include/: ArrowSFMLDrawer.h  MovableObjectState.h  tArrowFigure.h
arrow_figure/src/: ArrowSFMLDrawer.cc  MovableObjectState.cc  SFMLDrawer.cc  tArrowFigure.cc
drawing_figures/: CMakeLists.txt
drawing_figures/include/: FigureDrawingEngine.h  FigureDrawingMenu.h  SFMLDrawer.h
drawing_figures/src/: FigureDrawingEngine.cc  FigureDrawingMenu.cc  SFMLDrawer.cc
include/: DrawInterfaces.h  FigureDrawingEngine.h  FigureDrawingMenu.h  FigureDrawingStates.h  ProgramState.h  tLineSegment.h  tPoint.h  tRectangle.h  tSegmentFigure.h  tTriangle.h
my_graph_lib/: CMakeLists.txt
my_graph_lib/include/: DrawInterfaces.h  Interfaces.h  tCircle.h  tEllipse.h  tLineSegment.h  tPoint.h  tRectangle.h  tSegmentFigure.h  tTriangle.h
my_graph_lib/src/: tCircle.cc  tEllipse.cc  tLineSegment.cc  tPoint.cc  tRectangle.cc  tSegmentFigure.cc  tTriangle.cc
src/: FigureDrawingMenu.cpp  main.cpp  tPoint.cpp  tSegmentFigure.cpp
